--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,13 @@
         android:layout_height="match_parent"
         tools:context=".view.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/transaction_adapter"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:scrollbars="vertical"
-            tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:itemCount="2"
-            tools:listitem="@layout/item_transaction"
-            app:layout_constraintRight_toRightOf="parent"/>
+    <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/my_nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:navGraph="@navigation/nav_graph"
+            app:defaultNavHost="true"
+            />
 
 </android.support.constraint.ConstraintLayout>
