--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,14 +9,20 @@
             android:id="@+id/transactionDetailFragment"
             android:name="uk.co.hughingram.ethscan.view.TransactionDetailFragment"
             android:label="fragment_transaction_detail"
-            tools:layout="@layout/fragment_transaction_detail"/>
+            tools:layout="@layout/fragment_transaction_detail">
+        <argument
+                android:name="transaction"
+                app:nullable="true"
+                android:defaultValue="@null"
+                app:argType="uk.co.hughingram.ethscan.network.EthereumTransaction"/>
+    </fragment>
     <fragment
             android:id="@+id/transactionListFragment"
             android:name="uk.co.hughingram.ethscan.view.TransactionListFragment"
             android:label="fragment_transaction_list"
             tools:layout="@layout/fragment_transaction_list">
         <action
-                android:id="@+id/action_transactionListFragment_to_transactionDetailFragment"
+                android:id="@+id/action_to_transaction_details"
                 app:destination="@id/transactionDetailFragment"/>
     </fragment>
 </navigation>
