--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -2,15 +2,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
                 android:layout_height="72dp">
 
     <TextView
-            android:id="@+id/timestamp"
-            tools:text="foo bar"
-            android:layout_centerVertical="true"
+            android:id="@+id/lbl_timestamp"
+            android:layout_margin="8dp"
+            android:text="@string/lbl_timestamp"
+            android:layout_below="@id/lbl_nonce"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+    <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="1518167245"
+            android:textStyle="bold"
+            android:layout_alignBottom="@+id/lbl_timestamp"
+            android:layout_toEndOf="@+id/lbl_timestamp"/>
+
+    <TextView
+            android:id="@+id/lbl_nonce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_alignParentTop="true"
+            android:text="@string/lbl_nonce"/>
+
+    <TextView
+            android:id="@+id/nonce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="99"
+            android:textStyle="bold"
+            android:layout_alignBottom="@+id/lbl_nonce"
+            android:layout_toEndOf="@+id/lbl_nonce"/>
+
+    <View
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:background="@color/colorPrimary"
+            android:layout_height="0.5dp"/>
 
 </RelativeLayout>
