style transaction details page

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Text" parent="AppTheme">
+
+    </style>
+
+    <style name="AppTheme.Text.Label" parent="AppTheme.Text">
+    </style>
+
+    <style name="AppTheme.Text.Value" parent="AppTheme.Text">
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
