--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -6,6 +6,7 @@
 
     <TextView
         android:id="@+id/lbl_nonce"
+        style="@style/AppTheme.Text.Label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -16,6 +17,7 @@
 
     <TextView
         android:id="@+id/nonce"
+        style="@style/AppTheme.Text.Value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/lbl_nonce"
@@ -25,6 +27,7 @@
 
     <TextView
         android:id="@+id/lbl_timestamp"
+        style="@style/AppTheme.Text.Label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/lbl_nonce"
@@ -35,6 +38,7 @@
 
     <TextView
         android:id="@+id/timestamp"
+        style="@style/AppTheme.Text.Value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/lbl_timestamp"
@@ -45,6 +49,7 @@
 
     <TextView
         android:id="@+id/lbl_hash"
+        style="@style/AppTheme.Text.Label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lbl_nonce"
@@ -55,6 +60,7 @@
 
     <TextView
         android:id="@+id/hash"
+        style="@style/AppTheme.Text.Value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/lbl_hash"
@@ -67,7 +73,9 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_below="@id/hash"
+        android:layout_marginLeft="@dimen/margin_edges"
         android:layout_marginTop="@dimen/margin_items"
+        android:layout_marginRight="@dimen/margin_edges"
         android:background="@color/colorPrimary" />
 
 </RelativeLayout>
