--- a/app/src/main/res/layout/fragment_transaction_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_detail.xml
@@ -45,13 +45,71 @@
         app:layout_constraintTop_toBottomOf="@id/timestamp" />
 
     <TextView
+        android:id="@+id/lbl_from"
+        style="@style/AppTheme.Text.Label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_edges"
+        android:text="@string/lbl_from"
+        app:layout_constraintTop_toBottomOf="@id/divider_timestamp" />
+
+    <TextView
+        android:id="@+id/from"
+        style="@style/AppTheme.Text.Value"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_items"
+        app:layout_constraintStart_toStartOf="@id/values_guideline"
+        app:layout_constraintTop_toBottomOf="@id/lbl_from"
+        tools:text="0x31b98d14007bdee637298086988a0bbd31184523" />
+
+    <View
+        android:id="@+id/divider_from"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="@dimen/margin_edges"
+        android:background="@color/colorPrimary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/from" />
+
+    <TextView
+        android:id="@+id/lbl_to"
+        style="@style/AppTheme.Text.Label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_edges"
+        android:text="@string/lbl_to"
+        app:layout_constraintTop_toBottomOf="@id/divider_from" />
+
+    <TextView
+        android:id="@+id/to"
+        style="@style/AppTheme.Text.Value"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_items"
+        app:layout_constraintStart_toStartOf="@id/values_guideline"
+        app:layout_constraintTop_toBottomOf="@id/lbl_to"
+        tools:text="0xfffa5813ed9a5db4880d7303db7d0cbe41bc771f" />
+
+    <View
+        android:id="@+id/divider_to"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="@dimen/margin_edges"
+        android:background="@color/colorPrimary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/to" />
+
+    <TextView
         android:id="@+id/lbl_hash"
         style="@style/AppTheme.Text.Label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_edges"
         android:text="@string/lbl_hash"
-        app:layout_constraintTop_toBottomOf="@+id/divider_timestamp" />
+        app:layout_constraintTop_toBottomOf="@+id/divider_to" />
 
     <TextView
         android:id="@+id/block_hash"
@@ -66,6 +124,7 @@
         tools:text="0xd5fea65e23ed575f637c53555c461f496f49b0993cfc59d781f9ad5d50bee50e" />
 
     <View
+        android:id="@+id/divider_hash"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginTop="@dimen/margin_edges"
@@ -74,4 +133,32 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/block_hash" />
 
+    <TextView
+        android:id="@+id/lbl_data"
+        style="@style/AppTheme.Text.Label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_edges"
+        android:text="@string/lbl_data"
+        app:layout_constraintTop_toBottomOf="@id/divider_hash" />
+
+    <TextView
+        android:id="@+id/data"
+        style="@style/AppTheme.Text.Value"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_items"
+        app:layout_constraintStart_toStartOf="@id/values_guideline"
+        app:layout_constraintTop_toBottomOf="@id/lbl_data"
+        tools:text="0x28814f030000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000006000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000" />
+
+    <View
+        android:id="@+id/divider_data"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="@dimen/margin_edges"
+        android:background="@color/colorPrimary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/data" />
 </android.support.constraint.ConstraintLayout>
