--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -73,6 +73,6 @@
         android:layout_marginLeft="@dimen/margin_edges"
         android:layout_marginTop="@dimen/margin_items"
         android:layout_marginRight="@dimen/margin_edges"
-        android:background="@color/colorPrimary" />
+        android:background="?attr/colorPrimary" />
 
 </RelativeLayout>
