--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/slate_gray</item>
+        <item name="colorPrimaryDark">@color/dark_blue_gray</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/dark_blue_gray</item>
+        <item name="android:textColor">@color/light_blue</item>
+        <item name="android:textColorPrimary">@color/light_blue</item>
     </style>
 
     <style name="AppTheme.Text" parent="AppTheme">
